Fix title hidden by card and override style

--- a/src/components/LocationDetails/PollutantInfo.css
+++ b/src/components/LocationDetails/PollutantInfo.css
@@ -11,7 +11,9 @@
 }
 
 .link {
-  display: block;
+  font-family: Comfortaa, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   color: black;
   text-decoration: none;
+  line-height: 1;
+  display: block;
 }
